# swon

./: .gitignore  CMakeLists.txt  Package.resolved  Package.swift  README.md
.github/workflows/: test.yml
Examples/: main.swift
Sources/SWON/: Extensions.swift  Protocols.swift  SWON.swift
Sources/SWONMacros/: CMakeLists.txt  Decoding.swift  Encoding.swift  Extensions.swift  Helpers.swift  Macros.swift  Protocols.swift  SWONMacro.swift
Sources/SWON_C/: swon.c
Sources/SWON_C/include/: module.modulemap  swon.h
Tests/SWONTests/: ComplexStruct.swift  SWONPerformanceTests.swift  SWONTests.swift
Tests/SWONTests/Resources/: minimal.json  partial.json  populated.json
scripts/: build.sh
